# Ultralytics

./: .gitignore  Dockerfile  README.md  ai_colormap.py  ai_model.proto  ai_model_pb2.py  docker-compose.yml  export_openvino.py  pyproject.toml  requirements.txt  scanner.py
scanner_ai_v2/: dev.sh
testing/: test_scanner_ai_script.py
